<resources>
    <string name="app_name">songRating</string>
    <string name="insert">INSERT</string>
    <string name="show_list">SHOW LIST</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="stars">Stars</string>
    <string name="hint3">Enter year of release here</string>
    <string name="year">Year</string>
    <string name="hint2">Enter singers\' name here</string>
    <string name="singers">Singers</string>
    <string name="hint1">Enter song title here</string>
    <string name="song_title">Song Title</string>
    <string name="btn5Stars">SHOW ALL SONGS WITH 5 STARS</string>
    <!--<string-array name="options">
        <item>SHOW LIST</item>
        <item>Title[ASC]</item>
        <item>Title[DESC]</item>
        <item>Singers[ASC]</item>
        <item>Singers[DESC]</item>
        <item>Year[ASC]</item>
        <item>Year[DESC]</item>
        <item>Stars[ASC]</item>
        <item>Stars[DESC]</item>
    </string-array>-->
</resources>